# NeuPAN

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: claude-267f-cwd  run_exp.py
example/LON/: LON_corridor.py  LON_corridor.yaml  LON_corridor_01.py  LON_corridor_01.yaml  LON_corridor_02.py  LON_corridor_02.yaml  planner.yaml  planner_0.1.yaml  planner_0.2.yaml
example/convex_obs/acker/: env.yaml  planner.yaml
example/convex_obs/diff/: env.yaml  planner.yaml
example/convex_obs/omni/: env.yaml  planner.yaml
example/corridor/acker/: env.yaml  planner.yaml
example/corridor/diff/: env.yaml  planner.yaml
example/corridor/omni/: env.yaml  planner.yaml
example/dune_train/: dune_train_acker.py  dune_train_acker.yaml  dune_train_diff.py  dune_train_diff.yaml
example/dyna_non_obs/acker/: env.yaml  planner.yaml
example/dyna_non_obs/diff/: env.yaml  planner.yaml
example/dyna_non_obs/omni/: env.yaml  planner.yaml
example/dyna_obs/acker/: env.yaml  planner.yaml
example/dyna_obs/diff/: env.yaml  planner.yaml
example/dyna_obs/omni/: env.yaml  planner.yaml
example/model/acker_robot_default/: model_0.pth  model_1000.pth  model_1500.pth  model_2000.pth  model_2500.pth  model_3000.pth  model_3500.pth  model_4000.pth  model_4500.pth  model_500.pth  model_5000.pth  results.txt  train_dict.pkl
neupan/: __init__.py  neupan.py
neupan/blocks/: __init__.py  dune.py  dune_train.py  initial_path.py  nrmp.py  obs_point_net.py  pan.py
neupan/configuration/: __init__.py
neupan/robot/: __init__.py  robot.py
neupan/util/: __init__.py
(+51 files in other folders)
